@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketSearch.pm - Utilities for tickets
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketSearch.pm,v 1.138 2011/12/21 08:24:48 mg Exp $
+# $Id: AgentTicketSearch.pm,v 1.139 2011/12/23 10:56:02 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -27,7 +27,7 @@ use Kernel::System::DynamicField::Backend;
 use Kernel::System::VariableCheck qw(:all);
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.138 $) [1];
+$VERSION = qw($Revision: 1.139 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -653,7 +653,27 @@ sub Run {
             }
         }
 
-        # prepare fulltext search
+        # check full text string to see if contents is a ticket number
+        # if exists and not in print or CSV mode, redirect to this screen
+        if (
+            $GetParam{Fulltext}
+            && $Self->{ParamObject}->GetParam( Param => 'CheckTicketNumberAndRedirect' )
+            && $GetParam{ResultForm} ne 'Normal'
+            && $GetParam{ResultForm} ne 'Print'
+            )
+        {
+            my $TicketID = $Self->{TicketObjectSearch}->TicketIDLookup(
+                TicketNumber => $GetParam{Fulltext},
+                UserID       => $Self->{UserID},
+            );
+            if ($TicketID) {
+                return $Self->{LayoutObject}->Redirect(
+                    OP => "Action=AgentTicketZoom;TicketID=$TicketID",
+                );
+            }
+        }
+
+        # prepare full text search
         if ( $GetParam{Fulltext} ) {
             $GetParam{ContentSearch} = 'OR';
             for (qw(From To Cc Subject Body)) {
